objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>Field to store extension number for phone.</description>
    <label>Extension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>