objects/Contact/fields/IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleOnPatientCard__c</fullName>
    <description>The field is being referenced in the below Patient Cared configuration records.
- Medical Record Number
- Phone
- Email</description>
    <formula>NOT(ISBLANK(LastName))</formula>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>