objects/Contact/fields/PatientID__c.field-meta.xml
<CustomField>
    <fullName>PatientID__c</fullName>
    <description>PatientID to show in the Patient Card</description>
    <formula>Account.PatientID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PatientID</label>
    <type>Text</type>
</CustomField>