objects/Contact/fields/SitePersona__c.field-meta.xml
<CustomField>
    <fullName>SitePersona__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>List of personas at the Treatment Center Portal.</description>
    <label>Site Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAR-T Coordinator</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>