objects/Contact/recordTypes/SitePersonnel.recordType-meta.xml
<RecordType>
    <fullName>SitePersonnel</fullName>
    <active>true</active>
    <label>Site Personnel</label>
</RecordType>