objects/Contact/validationRules/FirstNameIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameIsRequired</fullName>
    <active>true</active>
    <description>First name is required to create any record.</description>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter the First Name.</errorMessage>
</ValidationRule>